--- a/manifest.json
+++ b/manifest.json
@@ -1,31 +1,17 @@
 {
- "version": "0.1.0",
- "name": "vixalien's site",
- "short_name": "vixsite",
- "description": "A site, for vixalien",
- "start_url": "/?utm_source=pwa_homescreen",
- "orientation": "portrait",
- "display": "standalone",
- "serviceworker": "/sw.js",
- "scope": "/",
- "background_color": "#ffffff",
- "theme_color": "#f25767",
- "prompt_message": "Add a Home screen icon for easy and offline access to muz's docs",
- "icons": [
-  {
-    "src": "/img/icons/icon.svg",
-    "sizes": "144x144",
-    "type": "image/png"
-  }],
-  "status": "ok",
-  "developer": {
-    "name": "saintvixalien",
-    "url": "github.com/vixalien"
-  },
-  "type": "privileged",
-  "permissions": [],
-  "installs_allowed_from": [
-    "*"
+  "name": "vixalien's site",
+  "short_name": "vixsite",
+  "description": "vixalien's site with a blog, stuf and stuff",
+  "lang": "en-US",
+  "start_url": "/",
+  "display": "minimal-ui",
+  "orientation": "any",
+  "theme_color": "white",
+  "icons": [
+    {
+      "src": "/img/icons/icon.png",
+      "sizes": "144x144"
+    }
   ],
-  "default_locale": "en"
+  "background_color": "white"
 }
